updates in the nav and createview components

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -84,3 +84,13 @@ input::-webkit-inner-spin-button {
     @apply flex flex-col items-center;
   }
 }
+
+/*dissables highlighting on double-click and generally*/
+* {
+  -webkit-touch-callout: none; /* Disable callouts on iOS */
+  -webkit-user-select: none; /* Disable selection on WebKit */
+  -khtml-user-select: none; /* Disable selection on Konqueror HTML */
+  -moz-user-select: none; /* Disable selection on Mozilla Firefox */
+  -ms-user-select: none; /* Disable selection on Internet Explorer/Edge */
+  user-select: none; /* Disable selection on other browsers */
+}
